# file_explorer

./: .clang-tidy  .gitignore  CMakeLists.txt  CPPLINT.cfg  README.md
docs/: Usecase.md
docs/md/: Architecture.md  Requirements.md
script/: set_vcvarsall.bat  test.bat
src/: CMakeLists.txt
src/file_explorer/: CMakeLists.txt  adapter.h  dummy.cpp  dummy.h  entity.h  file_explorer.h  infrastructure.h  usecase.h
src/file_explorer/core/: core.cpp  core.h
src/file_explorer/entity/: database.cpp  database.h  mixin.h  repository.cpp  repository.h  trie.h
src/file_explorer/entity/filesystem/: factory.cpp  factory.h  file.cpp  file.h  file_interface.cpp  file_interface.h  filesystem.h  folder.cpp  folder.h  folder_tree_search.cpp  folder_tree_search.h
src/file_explorer/filesystem/: file.cpp  file.h  local.cpp  local.h  repository.h
src/file_explorer/model/: worker.cpp  worker.h
src/file_explorer/usecase/local_filesystem/: local_filesystem.cpp  local_filesystem.h
test/: CMakeLists.txt  main.cpp
test/file_explorer/: dummy_test.cpp  filesystem_test.cpp
test/file_explorer/entity/: database_test.cpp  filesystem_test.cpp  repository_test.cpp  trie_test.cpp
test/file_explorer/usecase/: local_filesystem_test.cpp
test/model/: worker_test.cpp
